# artificial_language

./: README.md  generate_artificial_corpus.py  pyproject.toml
artificial_language/configs/: dependency_nesting_uniform.jsonnet  no_structure_random_walk.jsonnet  no_structure_zipf.jsonnet  parenthesis_flat_zipf.jsonnet  parenthesis_nesting_zipf.jsonnet
artificial_language/configs/languages/: dependency_flat_random_walk.jsonnet  dependency_flat_uniform.jsonnet  dependency_flat_zipf.jsonnet  dependency_nesting_random_walk.jsonnet  dependency_nesting_zipf.jsonnet  no_structure_uniform.jsonnet
artificial_language/configs/lib/: empirical_distribution_sampler.libsonnet  language_base.libsonnet  trunc_norm_sampler_wiki_en.libsonnet
artificial_language/languages/: language.py  util.py
artificial_language/languages/random_sampling_languages/: random_sampling_language.py  random_uniform_language.py  random_walk_language.py  random_zipf_language.py
artificial_language/languages/random_sampling_languages/sentence_length_sampler/: __init__.py  empirical_distribution_sampler.py  sentence_length_sampler.py  trunc_norm_sampler.py
artificial_language/languages/structured_languages/: __init__.py  parenthesis_language.py
