[tool.poetry]
name = "artificial_language"
version = "0.1.0"
description = ""
authors = ["Ryokan Ri <ryou0634@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.1.2"
numpy = "^1.22.3"
jsonnet = "^0.18.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
